@@ -548,16 +548,23 @@ scx_free(smartcard_t *sc)
  "  the record is freed when the counter reaches zero
  */
 void
-scx_release(smartcard_t *sc)
+scx_release(smartcard_t *sc, bool pthlock)
 {
     if (sc != NULL && --sc->count == 0)
     {
 	smartcard_t **pp = &smartcards;
 	while (*pp != sc)
 	    pp = &(*pp)->next;
-	lock_certs_and_keys("scx_release");
-        *pp = sc->next;
-	unlock_certs_and_keys("scx_release");
+	if(pthlock)
+	{
+	    lock_certs_and_keys("scx_release");
+	    *pp = sc->next;
+	    unlock_certs_and_keys("scx_release");
+	}
+	else
+	{
+	    *pp = sc->next;
+	}
 	release_cert(sc->last_cert);
 	scx_free(sc);
     }
