@@ -10,6 +10,7 @@ v2.5.15
   #582: Cannot initiate on demand a connection with traffic selectors [Ilia Sotnikov]
   #590: serpent lib used private kernel header [paul]
   #544: the following error should only show up for x509 debugging: ... [paul]
+  #185: Deadlock in function "scx_release()" daemon pluto.(SMARTCARD) [Kurodo]
 
 v2.5.14
 ?
